--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,25 @@
 {
     "version": "0.3.0",
     "configurations": [
+    {
+        "name": ".NET Core Attach",
+        "type": "coreclr",
+        "request": "attach"
+    },
+    {
+        "name": "PowerShell: Interactive Session",
+        "type": "PowerShell",
+        "request": "launch",
+        "cwd": ""
+    },
+    {
+        "type": "PowerShell",
+        "request": "launch",
+        "name": "PowerShell Launch Current File",
+        "script": "${file}",
+        "args": [],
+        "cwd": "${file}"
+    },
         {
             "type": "PowerShell",
             "request": "launch",
